@@ -2,7 +2,7 @@
 
 =head1 NAME
 
-clone_lightweight.pl 
+clone_lightweight.pl
 
 =head1 VERSION
 
@@ -14,8 +14,8 @@ $LastChangedDate: 2004-09-13 20:35:57 -0700 (Mon, 13 Sep 2004) $
 
 =head1 DESCRIPTION
 
-This script is called by "make clone" after clone_files.pl to remove all 
-pre-compiled and locally previewed files from the tree in order to make a 
+This script is called by "make clone" after clone_files.pl to remove all
+pre-compiled and locally previewed files from the tree in order to make a
 lightweight clone.
 
 =head1 AUTHOR
@@ -43,7 +43,7 @@ do "./clone.db" or die "Failed to read clone.db : $!";
 print "\n\n==> Removing Files for Lightweight Clone <==\n\n";
 
 # take out everything below the following directories and then remake the dirs
-my @dirs = qw(comp/data/preview data/burn/data/obj data/burn/stage 
+my @dirs = qw(comp/data/preview data/burn/data/obj data/burn/stage
     data/burn/preview data/burn/sandbox data/obj);
 
 foreach my $dir (@dirs) {
